--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
     }
 }
 
+
 dependencies {
     def nav_version = "2.2.1"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -40,13 +41,15 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation 'com.google.android.material:material:1.2.0-alpha04'
-    implementation "androidx.room:room-ktx:2.2.3"
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation "androidx.room:room-ktx:2.2.4"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.room:room-runtime:2.2.3'
-    kapt 'androidx.room:room-compiler:2.2.3'
+    implementation 'androidx.room:room-runtime:2.2.4'
+    implementation 'com.joestelmach:natty:0.11'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
+    kapt 'androidx.room:room-compiler:2.2.4'
 }
